WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254477
[IFC] Incorrect out-of-flow box placement when text-align is not start (display: inline)
https://bugs.webkit.org/show_bug.cgi?id=254477
Summary
[IFC] Incorrect out-of-flow box placement when text-align is not start (displ...
alan
Reported
2023-03-25 20:19:41 PDT
ssia
Attachments
Patch
(13.81 KB, patch)
2023-03-25 20:22 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(13.81 KB, patch)
2023-03-27 07:14 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-03-25 20:22:11 PDT
Created
attachment 465594
[details]
Patch
alan
Comment 2
2023-03-27 07:14:30 PDT
Created
attachment 465609
[details]
[fast-cq]Patch
EWS
Comment 3
2023-03-27 09:44:26 PDT
Committed
262154@main
(6e5f0fcfcc56): <
https://commits.webkit.org/262154@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 465609
[details]
.
Radar WebKit Bug Importer
Comment 4
2023-03-27 09:45:16 PDT
<
rdar://problem/107271178
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug