[IFC] Incorrect out-of-flow box placement when text-align is not start (display: inline) https://bugs.webkit.org/show_bug.cgi?id=254477

Reviewed by Antti Koivisto.

Take horizontal alignment into account when computing the static position for a "display: inline" out-of-flow box.
(This is also a progression compared to legacy line layout for text-align-last).

* LayoutTests/fast/inline/out-of-flow-inline-with-text-align-on-last-line-expected.html: Added.
* LayoutTests/fast/inline/out-of-flow-inline-with-text-align-on-last-line.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::layoutInFlowContent):
(WebCore::Layout::InlineFormattingContext::layoutInFlowContentForIntegration):
(WebCore::Layout::InlineFormattingContext::computeStaticPositionForOutOfFlowContent):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.h:
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingGeometry.cpp:
(WebCore::Layout::InlineFormattingGeometry::staticPositionForOutOfFlowInlineLevelBox const):
(WebCore::Layout::InlineFormattingGeometry::staticPositionForOutOfFlowBlockLevelBox const):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingGeometry.h:

Canonical link: https://commits.webkit.org/262154@main